--- a/SixRens.UI.XamarinAndroid/SixRens.UI.XamarinAndroid/SixRens.UI.XamarinAndroid.csproj
+++ b/SixRens.UI.XamarinAndroid/SixRens.UI.XamarinAndroid/SixRens.UI.XamarinAndroid.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0-android</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
@@ -8,5 +8,8 @@
     <ApplicationId>io.github.yijingframework.sixrens</ApplicationId>
     <ApplicationVersion>1</ApplicationVersion>
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
   </PropertyGroup>
 </Project>
